src/test/ui/never_type/diverging-fallback-no-leak.fallback.stderr
error[E0277]: the trait bound `!: Test` is not satisfied
  --> $DIR/diverging-fallback-no-leak.rs:17:5
   |
LL |     unconstrained_arg(return);
   |     ^^^^^^^^^^^^^^^^^ the trait `Test` is not implemented for `!`
   |
   = note: this trait is implemented for `()`.
   = note: this error might have been caused by changes to Rust's type-inference algorithm (see issue #48950 <https://github.com/rust-lang/rust/issues/48950> for more information).
   = help: did you intend to use the type `()` here instead?
note: required by a bound in `unconstrained_arg`
  --> $DIR/diverging-fallback-no-leak.rs:12:25
   |
LL | fn unconstrained_arg<T: Test>(_: T) {}
   |                         ^^^^ required by this bound in `unconstrained_arg`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
